# gitedit

./: .gitignore  Makefile  README.md  flake.nix  meson.build
include/: backup.h  editor.h  git_objects.h  process.h  tui.h  utils.h
src/: backup.c  editor.c  git_objects.c  main.c  process.c  tui.c  utils.c
